--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "classnames": "^2.3.1",
     "currency-formatter": "^1.5.9",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "primeicons": "^5.0.0",
     "primereact": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.1.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "toastr": "^2.1.4",
     "web-vitals": "^2.1.4"
